# Trade-Mathing-Engine-V2

./: .gitignore  CMakeLists.txt  main.cpp
DataBase/: CMakeLists.txt  DataBase.cpp  init.sql  test.db  test_main.cpp
DataBase/Include/: DataBase.hpp
Orderbook/: CMakeLists.txt  OrderBook.cpp
Orderbook/Fifo/: CMakeLists.txt  Fifo.cpp
Orderbook/Fifo/FifoTests/: CMakeLists.txt  FifoTestsMain.cpp
Orderbook/Include/: Data.hpp  OrderBook.hpp  OrderData.hpp  OrderParameters.hpp  Price.hpp  PriceLevel.hpp  UserOrders.hpp
Orderbook/Include/AbstractClasses/: AlgorithmFactory.hpp  MatchingAlgorithm.hpp  Order.hpp  Singleton.hpp
Orderbook/Include/Data/: MatchData.hpp  OrderMatch.hpp  OriginalOrderMatchData.hpp
Orderbook/Include/Fifo/: Fifo.hpp  FifoFactory.hpp  FifoOrder.hpp
Orderbook/Include/ProRata/: ProRata.hpp  ProRataFactory.hpp  ProRataOrder.hpp  ProRataPriceLevel.hpp
Orderbook/ProRata/: CMakeLists.txt  ProRata.cpp
Orderbook/ProRata/ProRataTests/: CMakeLists.txt  ProRataTestsMain.cpp
Orderbook/TestExtensions/: TestExtensions.hpp  TestExtensionsOrderBook.hpp
Orderbook/Tests/: CMakeLists.txt
Orderbook/Tests/LimitOrderTests/: CMakeLists.txt  FillOrKillTests.cpp  FullFillTests.cpp  PartialFillTests.cpp
Orderbook/Tests/MarketOrderTests/: CMakeLists.txt  FillOrKillTests.cpp  FullFillTests.cpp  PartialFillTests.cpp
RessourceManager/: CMakeLists.txt  RessourceManager.cpp  tests.cpp
RessourceManager/Include/: IdGenerator.hpp  RessourceManager.hpp
